Fix server page icon button alignment

--- a/src/components/ServerDetailsPage.scss
+++ b/src/components/ServerDetailsPage.scss
@@ -54,6 +54,7 @@
     & > .icon{
       height: 38px;
       display: flex;
+      align-items: center;
 
       svg{
         height: 20px;
